[package]
name = "shekel"
version = "0.1.0"
description = "Own the payments network"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "test"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.1"
anchor-spl = "0.22.1"
solana-program = "1.10.0"
